OO-8709: Cancel, sort, validate user roles edit panel